--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,12 +13,16 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@tanstack/react-query": "^5.13.4",
+    "axios": "^1.6.2",
+    "formik": "^2.4.5",
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "^20",
