--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,6 +18,7 @@
     "formik": "^2.4.5",
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
+    "nookies": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
