--- a/be-thmstore/package.json
+++ b/be-thmstore/package.json
@@ -8,17 +8,20 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
     "@types/node": "^16.11.10",
     "ts-node": "10.7.0",
     "typescript": "4.5.2"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
