--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.2",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.16",
+    "lottie-react": "^2.4.0",
     "next": "14.0.4",
     "nookies": "^2.5.2",
     "react": "^18",
