--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^2.0.1",
     "@tanstack/react-query": "^5.13.4",
     "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.16",
     "lottie-react": "^2.4.0",
