--- a/be-thmstore/package.json
+++ b/be-thmstore/package.json
@@ -10,6 +10,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.11",
     "@types/node": "^16.11.10",
+    "@types/uuid": "^9.0.7",
     "ts-node": "10.7.0",
     "typescript": "4.5.2"
   },
@@ -21,6 +22,7 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
+    "midtrans-client": "^1.3.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2",
     "pg": "^8.11.3",
