--- a/front-end/.env
+++ b/front-end/.env
@@ -1,1 +1,6 @@
 NEXT_PUBLIC_API_URL=http://localhost:5000/api/v1
+
+# MIDTRANS
+MIDTRANS_SERVER_KEY= SB-Mid-server-Egj98bb4Dzr4V9txWA7cVkfN
+MIDTRANS_CLIENT_KEY = SB-Mid-client-96TrsVVWbb-rmU4a
+MIDTRANS_MERCHANT_ID =G532347052
