--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,6 +20,7 @@
     "formik": "^2.4.5",
     "framer-motion": "^10.16.16",
     "lottie-react": "^2.4.0",
+    "moment": "^2.30.1",
     "next": "14.0.4",
     "nookies": "^2.5.2",
     "react": "^18",
